suite/tests/decls/invalid/for-init-with-sc.c
int main(void)
{
    for (static int a = 0; a < 10; a++) {

    }
}
